# router-simulation

./: CMakeLists.txt  README.md
.github/workflows/: compile.yml
app/: router.c
include/: config.h  global.h  packet_handler.h  parse.h  receiver.h  sender.h  structures.h  terminal.h
src/: packet_handler.c  parse.c  receiver.c  sender.c  terminal.c
